--- a/supabase/functions/config.toml
+++ b/supabase/functions/config.toml
@@ -2,7 +2,8 @@
 project_id = "mrueqpffzauvdxmuwhfa"
 
 [global.env]
-PAYPAL_CLIENT_ID = "env(PAYPAL_CLIENT_ID)"
-PAYPAL_SECRET_KEY = "env(PAYPAL_SECRET_KEY)"
-PAYPAL_WEBHOOK_ID = "env(PAYPAL_WEBHOOK_ID)"
+STRIPE_API_KEY = "env(STRIPE_API_KEY)"
+STRIPE_WEBHOOK_SECRET = "env(STRIPE_WEBHOOK_SECRET)"
+STRIPE_PRODUCT_ID = "env(STRIPE_PRODUCT_ID)"
 RESEND_API_KEY = "env(RESEND_API_KEY)"
+
